# lattisense

cxx_sdk_v2/: check_sig.h
examples/: CMakeLists.txt
examples/ckks_softmax_cpu/: CMakeLists.txt  ckks_softmax_cpu.cpp  ckks_softmax_cpu.py
